@@ -158,3 +158,7 @@ Added copyright text at the top of files.
 
 *****
 
+Implemented edit command-line interface and documentation.
+
+*****
+
